assets/css/style.css
html {
    height: 100%;
}

.bg-image {
    background: url('./media/images/lighbulb-bg.jpg') no-repeat center center fixed;
    background-size: cover;
    min-height: 60vh;
    min-width: 100vw;
    color: #555;
    font-family: 'Lato';
}

.main-text {
    height: 60vh;
    align-items: center;
}

.bg-black {
    background-color: #000 !important;
}

.bg-electric {
    background-color: rgb(63, 119, 248);
}

.bg-grey {
    background-color: rgb(229, 229, 232);
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.call-now-button {
    background: black;
    color: white;
    min-width: 260px;
}

.btn-black {
    background: black;
    color: white;
}

.call-now-button:hover,
.call-now-button:active,
.call-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

.text-black {
    color: #000 !important;
}

.text-white {
    color: #fff !important;
}

.border-black {
    border: 1px solid black !important;
}

.font-size {
    font-size: 150%;
}

